k8s/phpmyadmin/namespace.yaml
# kubectl create namespace my-namespace
apiVersion: v1
kind: Namespace
metadata:
  name: phpmyadmin
