k8s/phpmyadmin/deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: phpmyadmin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - containerPort: 3306
