k8s/phpmyadmin/service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: phpmyadmin
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
