k8s/phpmyadmin/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
