k8s/phpmyadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: phpmyadmin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: db.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
